fix up alignment

--- a/themes/book/assets/_main.scss
+++ b/themes/book/assets/_main.scss
@@ -91,7 +91,18 @@ ul.pagination {
 
 .container {
   max-width: $container-max-width;
+  position: relative;
   margin: 0 auto;
+  @media screen and (min-width: 1600px) {
+    right: -100px;
+  }
+  @media screen and (min-width: 1599px) {
+    right: -50px;
+  }
+  @media screen and (min-width: 1024px) {
+    right: -30px;
+  }
+
 }
 
 .book-icon {
